# superhuman-docs-sdk

./: .gitignore  README.md  build.sh  build.zig  build.zig.zon  go.mod
.github/workflows/: ci.yml  release.yml
docs/: service.md
go/: README.md  client.go  client_test.go  go.mod  helpers.go  operations_gen.go  reflect.go  types_gen.go
go/scripts/: generate.py
python/: README.md  pyproject.toml
python/scripts/: generate.py
python/src/superhuman_docs/: __init__.py  _generated.py  _models.py  _runtime.py  client.py
python/tests/: test_client.py
rust/: Cargo.toml  README.md
rust/src/: core.rs  lib.rs
smithy/: README.md  smithy-build.json
smithy/generator/: README.md  pom.xml
smithy/generator/src/main/java/com/github/its_felix/superhuman_docs_sdk/smithy/codegen/: GoCodegenPlugin.java  GoRenderer.java  GoSdkGenerator.java  MarkdownCodegenPlugin.java  MarkdownSdkGenerator.java  PythonCodegenPlugin.java  PythonModelRenderer.java  PythonRenderer.java  PythonSdkGenerator.java  RustCodegenPlugin.java  RustRenderer.java  RustSdkGenerator.java  SdkCodegen.java  SmithyBuildCommand.java  SuperhumanDocsCodegenPlugin.java  SuperhumanDocsSettings.java  TargetCodegenPlugin.java  TargetSdkGenerator.java  ZigCodegenPlugin.java  ZigRenderer.java  ZigSdkGenerator.java
smithy/model/: analytics.smithy  common.smithy  docs.smithy  errors.smithy  main.smithy  packs.smithy  pages.smithy  resources.smithy  rows.smithy  tables.smithy
smithy/scripts/: openapi_to_smithy.py
zig/: README.md
zig/src/: core.zig  lib.zig
zig/tools/: generate.py
(+2 files in other folders)
