[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "superhuman-docs"
version = "0.3.0"
description = "Python SDK for the Superhuman Docs API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Superhuman Docs SDK contributors" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
